k8s/zookeeper.yml
# 각각의 pod가 있고 이를 관리하는 서비스가 있고 이 서비스를 관리하는 replicaset이 있고, 이 replicaset으로 pod의 개수가 조절된다.

apiVersion: apps/v1
kind: Deployment

metadata:
  name: zookeeper-deployment    # 클러스터 내에서 유일한 Pod 이름
  namespace: lgcns          # Pod가 속할 네임스페이스

spec:                       
  replicas: 1               # 몇개의 Pod를 유지할 것인가 
  selector:
    matchLabels:            # replicaset은 직접 pod로 찾아갈 수 없으므로 matchLabels라고 주는 것
      app: zookeeper  

  template:                 # 참조의 대상이 되는 container를 의미하는 것(여기서 pod를 만드는 것)
    metadata:
      labels:
        app: zookeeper 

    spec:
      containers:               
        - name: zookeeper-container
          # 이렇게 일반 경로를 쓴다는 것은 docker hub에서 이미지를 가져오겠다는 의미이다. 만약 ecr에서 이미지를 가져오고 싶다면, ecr의 이미지 경로를 써주면 된다. 예시에서는 447839931800.dkr.ecr.us-east-2.amazonaws.com/sglim-zookeeper:latest라는 이미지를 가져오도록 설정했다.
          # 혹, 실행중인 컨테이너를 이미지로 만들고 ecr 배포할 경우 ecr repo 주소 사용가능
          image: wurstmeister/zookeeper
          ports:
           - containerPort: 2181 # 컨테이너가 노출할 포트

--- # 이거 위랑 아래를 나눠(구분해)주는 것
apiVersion: v1
kind: Service

metadata:
  name: zookeeper-service       # 클러스터 내에서 유일한 Pod 이름
  namespace: lgcns          # Pod가 속할 네임스페이스

spec:        
  type: ClusterIP           # service에서 selector를 쓰기 위해서는 type을 써줘야 함(쓰지 않으면 ClusterIP가 default)
  selector:
      app: zookeeper        # 외부에서 zookeeper라고 labes 이름이 붙은 놈에게 서비스를 통해 접근할 수 있게 해줌                          
  ports:
  # service port
  - port: 2181                
    # Pod inner port
    targetPort: 2181
