k8s/ingress.yml
# aws NLB -> ingress controller(pod)에 -> ingress > service -> pod
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: lgcns
  annotations:
    # kubernetes.io/ingress.class: nginx # nginx ingress controller가 이 Ingress 리소스를 처리하도록 지정
    # nginx.ingress.kubernetes.io/rewrite-target: /$1 # URL 경로 재작성 설정, 예시에서는 /inspire를 /로 재작성 << 첫번째 prefix(inspire)를 제거해달라는 것

spec:
  ingressClassName: nginx # nginx ingress controller가 이 Ingress 리소스를 처리하도록 지정
  rules:
    # host는 레코드로 등록한 도메인 이름을 입력해야 한다. 예시에서는 server.webstudy.shop이라는 도메인 이름을 입력했다. 이 도메인 이름은 AWS Route 53에서 레코드로 등록되어 있어야 한다. 레코드로 등록된 도메인 이름이 Ingress 리소스의 host와 일치해야 Ingress가 트래픽을 올바르게 라우팅할 수 있다.
    # 여러개를 등록 할 수도 있다. 예시에서는 하나만 등록했다.
  - host: server.don-forget.shop  # 레코드로 등록한 도메인 이름
    http:                       # HTTP 트래픽에 대한 규칙을 정의
      paths:                    # 여러 경로에 대한 규칙을 정의할 수 있음
      - path: /          # http://server.don-forget.shop/
        pathType: Prefix        
        backend:                # deployment로 인해 실행되고 있는 service를 말함
          service:              
            # routing을 위해서 api-gateway를 찾는 것임. 왜냐하면 api-gateway가 user-service, product-service, order-service로 라우팅하는 역할을 하기 때문이다. 즉, ingress -> api-gateway -> user/product/order-service로 트래픽이 전달되는 것이다.
            # http://server.don-forget.shop/user-service

            name: apigateway-service # ingress가 apigateway-service와 연결되어 있음을 나타냄
            port:
              #targetPort가 아닌 service port를 지정해야 한다. 왜냐하면 ingress가 service로 트래픽을 전달하기 때문이다.
              number: 80        # apigateway-service의 80번 포트로 트래픽을 전달

  # TLS 설정 예시, 실제 인증서 준비 필요
  # tls:
  # - hosts:
  #   - example.com
  #   secretName: tls-secret
